snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.jar.md5
930fa775a87027fe0164d1be209445e5